Revert "Merge branch 'develop' of https://github.com/coffeesaza/CoffeeSaza into develop"
This reverts commit 13658334479026942d6c9efa2e2d9a932e68791b, reversing
changes made to c1d9efd14b5b205292a8d1b2cd6181e819b1bc9c.

--- a/APAP/settings/static/scss/_feature.scss
+++ b/APAP/settings/static/scss/_feature.scss
@@ -6,16 +6,15 @@
         padding-bottom: 55px;
     }
 }
-// .app_feature_inner{
+.app_feature_inner{
     
-// }
+}
 .app_round_image{
     position: relative;
     padding-top: 80px;
     text-align: center;
     .round_c{
-        animation: 3s round_image infinite linear;
-        transform: rotate( -270deg );
+        animation: 10s round_image infinite linear;
     }
     .app_mobile{
         position: absolute;
