--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -43,7 +43,20 @@
 </header>
 
 
-<!-- 카드는 나중에 다시 넣어보자 -->	
+<!-- 카드는 나중에 다시 넣어보자 -->
+{% if schedule != null %}
+<section class="price_table_area" id="price" style="margin: 0px;"">
+    <div class="container">
+    
+        <div class="app_round_image">
+            <img class="round_c" src="{% static 'image/index/round-circle.png' %}" alt="">
+            
+            <a href="{% url 'main:mypage' user.username %}" class="app_mobile"><h1> 수강중인<br>강의가<br>없어요!! </h1></a>
+            
+        </div>          
+    </div>
+</section>
+{% else %}
         <section class="price_table_area" id="price">
             <div class="container">
                 <div class="main_title">
@@ -67,6 +80,7 @@
                 </div>
             </div>
         </section>
+        {% endif %}
       
     </body>
 <script type="text/javascript">
