--- a/APAP/settings/static/css/index/style.css
+++ b/APAP/settings/static/css/index/style.css
@@ -2980,14 +2980,21 @@ iframe {
 
 .app_round_image {
   position: relative;
-  padding-top: 80px;
   text-align: center;
 }
 
 .app_round_image .round_c {
   -webkit-animation: 10s round_image infinite linear;
-  animation: 10s round_image infinite linear;
+  animation: 18s round_image infinite linear;
+  transform: rotate( -270deg );
+  width: auto;
+  height: auto;
+  /* display: block; */
+  /* margin: 0px auto; */
+  /* vertical-align: middle; */
+  /* position: absolute; */
 }
+
 
 .app_round_image .app_mobile {
   position: absolute;
@@ -2996,6 +3003,7 @@ iframe {
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
+  padding-top: 200px;
 }
 
 .app_feature_item_inner {
@@ -8461,6 +8469,10 @@ iframe {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-height: 600px;
+  display: table-cell;
+  vertical-align: middle;
+  
 }
 
 .domain_search_box input {
