--- a/APAP/settings/static/css/page/component.css
+++ b/APAP/settings/static/css/page/component.css
@@ -74,19 +74,19 @@ html, body { height: 100%; }
 }
 
 .pt-page-1 {
-	background: #0ac2d2;
+	background: #B5B2FF;
 }
 
 .pt-page-2 {
-	background: #7bb7fa;
+	background: #FFB2D9;
 }
 
 .pt-page-3 {
-	background: #60d7a9;
+	background: #FFC19E;
 }
 
 .pt-page-4 {
-	background: #fdc162;
+	background: #B2EBF4;
 }
 
 .pt-page-5 {
