뭐가 문제야

--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -45,7 +45,7 @@
 
 <!-- 카드는 나중에 다시 넣어보자 -->
 {% if schedule != null %}
-<section class="price_table_area" id="price" style="margin: 0px;"">
+<section class="price_table_area" id="price" style="margin: 0px;">
     <div class="container">
     
         <div class="app_round_image">
