--- a/APAP/main/templates/main/detail.html
+++ b/APAP/main/templates/main/detail.html
@@ -60,6 +60,19 @@
                                 </div>
                             </div>
                         </div>
+                         <div class="col-md-6 col-xs-6">
+                            <div class="choose_item">
+                                <div class="media">
+                                    <div class="media-left">
+                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>페이지수</h4>
+                                        <p>{{print.pages}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-md-6 col-xs-6">
                             <div class="choose_item">
                                 <div class="media">
@@ -150,7 +163,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>총금액 </h4>
-                                        <p>{{rprint.0.point}}원</p>
+                                        <p>{{rprint.0.point}}</p>
                                     </div>
                                 </div>
                             </div>
