--- a/APAP/templates/base_index.html
+++ b/APAP/templates/base_index.html
@@ -57,7 +57,8 @@
         {% comment %} <!--알림-->
         <a href="#"><img src="{% static 'image/bell2.png' %}" style = "width: 30px; height: 30px; border-radius: 50%;"></a> {% endcomment %}
         <!--로그아웃-->
-        <a href="{% url 'authservice:logout' %}"><img src="{% static 'image/gologout.png' %}" style = "width: 30px; height: 30px; border-radius: 50%;" title="로그아웃"></a><br><br>
+        <a href="{% url 'authservice:logout' %}"><img src="{% static 'image/gologout.png' %}" style = "width: 30px; height: 30px; border-radius: 50%;" title="로그아웃"></a><br>
+        <h5> 포인트: <h5>
         </div>
         {% else %}
         {% endif %}
