--- a/APAP/main/templates/main/update.html
+++ b/APAP/main/templates/main/update.html
@@ -1,16 +1,34 @@
-<!--수정하기-->
-{% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
+{% extends 'base_index.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
-    <form action="{% url 'main:update' pprint.pk %}" method="POST">
-        {% csrf_token %}
-            <h3 style = "font-family: '777Balsamtint'">수정하기</h3>
-            <table style = "font-family: '777Balsamtint'">
-                {{ form.as_table }}
-            </table>
-            <input style = "font-family: '777Balsamtint'" class="btn btn-primary" type="submit" value="수정">
-        </form>
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
 
+<style>
+    input[type=submit] { background-color:white !important; class="btn buy-now" !important; border:none !important; box-shadow:none !important; width:120px !important;
+    height:50px !important; text-align="center" !important; border: 1px solid grey `!important;}
+</style>
+
+<section class="question_area">
+    <div class="container" style="padding-right:300px; padding-left:300px">
+        
+            <div class="main_title">
+                <h2>프린트 수정</h2>
+            </div>
+    <form action="{% url 'main:update' pprint.pk %}" method="POST" enctype="multipart/form-data" novalidate>
+       	 	{% csrf_token %}       
+            {% bootstrap_form form %}
+            {% csrf_token %}
+            {{form.media}}
+          
+            <center>
+            <div class="form-group col-md-12 btn-lg">
+                <input type="submit" class="btn buy-now" value=" UPDATE " style="font-size:20px;">
+            </div> </center>
+        </form>
+	</div>
+</section>
 
     
 {% endblock %}  
