--- a/APAP/settings/static/css/style.css
+++ b/APAP/settings/static/css/style.css
@@ -29,6 +29,19 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+@font-face { 
+    font-family: 'BRRA_R'; 
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/BRRA_R.woff') format('woff');
+    font-weight: normal; 
+    font-style: normal; 
+}
+
+@font-face { 
+    font-family: 'GoyangIlsan'; 
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GoyangIlsan.woff') format('woff'); 
+    font-weight: normal; 
+    font-style: normal; }
+
 /*----------------------------------*/
 
 
@@ -190,9 +203,10 @@ body {
 
 
 .hero-text {
+    font-family: 'BRRA_R', sans-serif !important;
     text-align: center;
     position: absolute;
-    top: 25%;
+    top: 10%;
     transform: translateY(-50%);
     left: 50%;
     transform: translateX(-50%);
@@ -208,7 +222,7 @@ body {
 }
 
 .hero-text h2 {
-    font-family: 'NanumSquareRound', sans-serif;
+    font-family: 'BRRA_R', sans-serif;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
@@ -216,7 +230,7 @@ body {
 }
 
 .hero-text h3 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'BRRA_R', sans-serif !important;
     color: #fff;
     font-size: 24px;
     margin-top: 24px;
@@ -229,9 +243,9 @@ body {
 }
 
 .hero-text h4 {
+    font-family: 'BRRA_R', sans-serif !important;
     color: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     margin-bottom: 60px;
 }
 
