--- a/APAP/settings/static/scss/_predefin.scss
+++ b/APAP/settings/static/scss/_predefin.scss
@@ -89,7 +89,7 @@ iframe{
     h2{
         font-size: 35px;
         color: $dip;
-        font-family: $mon;
+        font-family: 'BRRA_R' !important;
         font-weight: 300;
         text-transform: uppercase;
         position: relative;
