--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -51,7 +51,10 @@
         <div class="app_round_image">
             <img class="round_c" src="{% static 'image/index/round-circle.png' %}" alt="">
             
-            <a href="{% url 'main:mypage' user.username %}" class="app_mobile"><h1> 수강중인<br>강의가<br>없어요!! </h1></a>
+            <a href="{% url 'main:mypage' user.username %}" class="app_mobile"><h1 style="font-family: 'BRRA_R';
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;"> 수강중인<br>강의가<br>없어요!! </h1></a>
             
         </div>          
     </div>
