--- a/APAP/settings/static/css/bootstrap.css
+++ b/APAP/settings/static/css/bootstrap.css
@@ -1189,7 +1189,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: inherit;
+  font-family: "BRRA_R" !important;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
