--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -92,8 +92,9 @@
                 </div>
             </div>
         </section>
-
+{% endif %}
     </body>
+}
 <script type="text/javascript">
 	var getDate = document.getElementsByClassName("date");
 	var startDateTime = new Array();
