--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -47,7 +47,7 @@
 
 
 <!-- 카드는 나중에 다시 넣어보자 -->
-{% if schedule == null %}
+{% if schedule.count == 0 %}
 <section class="price_table_area" id="price" style="margin: 0px;">
     <div class="container">
 
