--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -4,48 +4,6 @@
 {% block content %}
 
 <body>
-	<header class="main_header_area ak_menu navbar_fixed">
-            <div class="main_menu_area">
-                <div class="container">
-                    <nav class="navbar navbar-default">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#"><img src="img/logo-6.png" alt=""></a>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    	<form action="{% url 'main:filter' %}" method="POST">
-                    	{% csrf_token %}
-                        <ul class="nav navbar-nav tabs">
-                        	<li><input type="submit" name="action" value="모두" class="transparent-input"></li>
-                            <li><input type="submit" name="action" value="월" class="transparent-input"></li>
-                            <li><input type="submit" name="action" value="화" class="transparent-input"></li>
-                            <li><input type="submit" name="action" value="수" class="transparent-input"></li>
-                            <li><input type="submit" name="action" value="목" class="transparent-input"></li>
-                            <li><input type="submit" name="action" value="금" class="transparent-input"></li>
-                            <li class=""><a href="{% url 'main:upload' user%}">추가하기</a></li>
-                        </ul>
-                    	</form>
-                        <form action="{% url 'main:filter' %}" method="POST">
-                        	{% csrf_token %}
-                        <ul class="nav navbar-nav navbar-right">
-                          <li><a href="#">Afford To Print : 어푸어푸</a></li>
-            </ul>
-            </form>
-                    </div><!-- /.navbar-collapse -->
-                    </nav>
-                </div>
-            </div>
-</header>
-
-
 <!-- 카드는 나중에 다시 넣어보자 -->
 {% if schedule.count == 0 %}
 <section class="price_table_area" id="price" style="margin: 0px;">
@@ -64,10 +22,22 @@
 </section>
 {% else %}
         <section class="price_table_area" id="price">
+			<div class = "container" style = "position: relative; width: 300px; height: 200px;">
+					<form action="{% url 'main:filter' %}" method="POST">
+					{% csrf_token %}
+						<input type="submit" name="action" value="모두" class="transparent-input">
+						<input type="submit" name="action" value="월" class="transparent-input">
+						<input type="submit" name="action" value="화" class="transparent-input">
+						<input type="submit" name="action" value="수" class="transparent-input">
+						<input type="submit" name="action" value="목" class="transparent-input">
+						<input type="submit" name="action" value="금" class="transparent-input">
+						<a style = "color:#6e6b6b" href="{% url 'main:upload' user%}">추가하기</a>
+					</form>
+					<div class="main_title">
+                    	<h2>대리프린트 목록</h2>
+					</div>
+			</div>	
             <div class="container">
-                <div class="main_title">
-                    <h2>대리프린트 목록</h2>
-                </div>
                 <div class="price_table_inner">
                 	{% for item in prints %}
                     <div class="price_item">
