--- a/APAP/templates/base_index.html
+++ b/APAP/templates/base_index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
 <style type="text/css">
- a:link { color: red; text-decoration: none;}
+ a:link { color: black; text-decoration: none;}
  a:visited { color: black; text-decoration: none;}
- a:hover { color: blue; text-decoration: underline;}
+ a:hover { color: black; text-decoration: underline;}
 </style>
     <style>
         @font-face { font-family: 'BRRA_R'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/BRRA_R.woff') format('woff'); font-weight: normal; font-style: normal; }
