--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -16,7 +16,7 @@
                         <div id="typed-strings">
                             <h3>대리 프린트<br>서비스의 시작</h3>
                             <h3>어푸어푸</h3>
-                            <h3>DGU<br>LIKELION<h3>
+                            <h3>DGU<br>LIKELION</h3>
                         </div>
                         <h3><span id="typed"></span></h3>
                     </div>
