--- a/APAP/main/templates/main/detail.html
+++ b/APAP/main/templates/main/detail.html
@@ -177,10 +177,10 @@
       <h4> {{ cnt }} 명이 신청했어요!</h4><br><br>
       <div class="form-group col-md-12">
         <div class="form-group col-md-12">
-          <a class="gradient_bg_btn" href="{% url 'main:update' print.id %}">수정하기</a>
+          <a style = "font-family: 'BRRA_R';"class="gradient_bg_btn" href="{% url 'main:update' print.id %}">수정하기</a>
         </div>
         <div class="form-group col-md-12">
-          <a class="gradient_bg_btn" href="{% url 'main:delete' print.id %}">삭제하기</a>
+          <a style = "font-family: 'BRRA_R';" class="gradient_bg_btn" href="{% url 'main:delete' print.id %}">삭제하기</a>
 
         </div>
     {% else %}
