--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -56,7 +56,7 @@
                             <div id="class"></div>
                             </form>
                         </ul>
-                        <a class="price_btn" href ="{% url 'main:detail' item.id %}">상세보기</a>
+                        <a style="font-family: 'BRRA_R';"class="price_btn" href ="{% url 'main:detail' item.id %}">상세보기</a>
                     </div>
                     {% endfor %}
                 </div>
