--- a/APAP/settings/static/css/page/default.css
+++ b/APAP/settings/static/css/page/default.css
@@ -22,7 +22,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	color: #fff;
-	background: #333;
+	background: #fff;
 	overflow: hidden;
 }
 
