--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -62,7 +62,7 @@ body { min-height: 100vh;  font-family: 'Roboto'; }
               {% endfor %}
             </select><br><br>
 
-            <center><input type="submit" value="submit"/><center>
+            <center><input type="submit" class="btn buy-now" style="font-family:'BRRA_R' !important; color: #333 !important;" value="추가"/><center>
           </form>
         </div>
       </div>
