--- a/APAP/templates/base.html
+++ b/APAP/templates/base.html
@@ -44,12 +44,12 @@
     <body>
         <!--home.html으로 돌아올 수 있는 아이콘 하나 필요할 듯-->
         {% if user.is_active %}
-        <div style="font-color: black; text-align:center; margin-top: 70px; ">
-            <a style ="font-family: 'BRRA_R'; font-size: 50px;" href = "{% url 'main:home' %}">어푸어푸</a>
+        <div style="font-color: black; text-align:center; margin-top: 75px; ">
+            <a style = "font-family: 'BRRA_R'; font-size: 50px;" href = "{% url 'main:home' %}"><img src="{% static 'image/rubber-duck.png' %}">어푸어푸<img src="{% static 'image/rubber-duck.png' %}"></a>
         </div>
         <div style ="text-align: right; font-family: '777Balsamtint'; font-size:20px; margin-right: 20px;">
         <!--프로필사진을 누르면 mypage.html으로-->
-        <a href = "{% url 'main:mypage' user.username %}">안녕하세요 {{ user.username }} 님! <img src="{% static 'image/duck2.png'  %}" style = "width: 30px; height: 30px; border-radius: 50%;" title="마이페이지"></a>
+        <a href = "{% url 'main:mypage' user.username %}">안녕하세요 {{ user.username }} 님!  <img src="{% static 'image/duck2.png'  %}" style = "width: 30px; height: 30px; border-radius: 50%;" title="마이페이지"></a>
         {% comment %} <!--알림-->
         <a href="#"><img src="{% static 'image/bell2.png' %}" style = "width: 30px; height: 30px; border-radius: 50%;"></a> {% endcomment %}
         <!--로그아웃-->
