--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -8,6 +8,22 @@
 <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 <style>
+.dropdown-menu{
+position: absolute;
+transform: translate3d(199px, 288px, 0px); 
+top: 0px;
+left: 0px;
+will-change: transform;
+overflow: scroll; 
+padding: 10px; 
+background-color: white; 
+margin-left: 20px;
+height:300px;
+display: flex; 
+flex-wrap: wrap; 
+align-items: center;
+max-width:500px;
+}
 body { min-height: 100vh;  font-family: 'Roboto'; }
 .container { margin: 150px auto; max-width: 640px; }
 .domain_search_area {
@@ -56,8 +72,8 @@ body { min-height: 100vh;  font-family: 'Roboto'; }
         <div class="domain_inner">
           <form action="{% url 'main:selected_lectures' %}" method="POST">
             {% csrf_token %}
-            <select name="lectures" id="lectures_id" class="form-control custom-select custom-select-sm" multiple="multiple" style="display: none;">
-              {% for lecture in lectures %}
+            <select name="lectures" id="lectures_id" class="form-control custom-select custom-select-sm" multiple="multiple">
+			  {% for lecture in lectures %}
                 <option value="{{lecture.id}}" name="lec">{{lecture.name}} : {{lecture.code}}</option>
               {% endfor %}
             </select><br><br>
