--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -14,11 +14,11 @@
                     <div>
                         <h1>APAP</h1>
                         <div id="typed-strings">
-                            <h3>대리 프린트<br>서비스의 시작</h3>
-                            <h3>어푸어푸</h3>
-                            <h3>DGU<br>LIKELION</h3>
+                            <h3 style="height:72px;">대리 프린트<br>서비스의 시작</h3>
+                            <h3 style="height:72px;">어푸어푸</h3>
+                            <h3 style="height:72px;">DGU<br>LIKELION</h3>
                         </div>
-                        <h3><span id="typed"></span></h3>
+                        <h3 style="height:72px;"><span id="typed" ></span></h3>
                     </div>
                     <br><br>
                     <div style="position:absolute !important">
