--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -58,7 +58,7 @@
                             <div id="class"></div>
                             </form>
                         </ul>
-                        <a class="price_btn" href ="{% url 'main:detail' item.id %}">상세보기</a>
+                        <a class="price_btn" href ="{% url 'main:detail' item.id %}" style="font-family:'BRRA_R' !important;">상세보기</a>
                     </div>
                     {% endfor %}
                 </div>
