--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -49,7 +49,7 @@
                         </div>
                         <ul>
                             <div class="time-elapsed"></div>
-                            <li class="date"><a href="#">{{ item.date|date:'Y-m-d H:m:s' }}</a></li>
+                            <li class="date"><a href="#">{{ item.date|date:'Y-m-d H:i:s' }}</a></li>
                             <form action="{% url 'main:endtimer' %}" method='POST' class="f" id="f">
                             {% csrf_token %}
                             <div id="print_id" value="{{item.id}}"></div>
@@ -69,7 +69,7 @@
 	var getDate = document.getElementsByClassName("date");
 	var startDateTime = new Array();
 	var startStamp = new Array();
-
+	//print(getDate)
 	for (var i = 0; i < getDate.length; i++) {
     	// getDate[i].innerHTML = getDate[i].textContent;
 	    startDateTime[i] = new Date(getDate[i].textContent)
