--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -143,14 +143,14 @@ body { min-height: 100vh;  font-family: 'Roboto'; }
         </div>
         <center><h3>{{user.username}}의 포인트는 {{user.point}}</h3></center>
        
-          {% for pprint in pprints %}
+          {% for item in expired %}
           <div class="price_item">
             <div class="price_header">
-              <h3>{{expired.req_p.lecture.name}}</h3>
-              <h2>{{expired.price}}</h2>
-              <h6>{{expired.from_user.username}}</h6>
-              <h6>{{expired.id}}</h6>
-              <h6>-{{expired.point}}</h6>
+              <h3>{{item.req_p.lecture.name}}</h3>
+              <h2>{{item.price}}</h2>
+              <h6>{{item.from_user.username}}</h6>
+              <h6>{{item.id}}</h6>
+              <h6>-{{item.point}}</h6>
             </div>
             <ul>
               <div class="time-elapsed"></div>
