--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -17,13 +17,12 @@ will-change: transform;
 overflow: scroll; 
 padding: 10px; 
 background-color: white; 
-margin-left: 20px;
-height:300px;
-display: flex; 
-flex-wrap: wrap; 
 align-items: center;
+max-height:300px;
 max-width:500px;
+font-family:'BRRA_R' !important;
 }
+
 body { min-height: 100vh;  font-family: 'Roboto'; }
 .container { margin: 150px auto; max-width: 640px; }
 .domain_search_area {
