--- a/APAP/main/templates/main/detail.html
+++ b/APAP/main/templates/main/detail.html
@@ -15,7 +15,7 @@
 
 <section class="choose_us_area">
 
-                <div class="container" style="padding-right:300px; padding-left:300px">
+                <div class="container" style="padding-right:15%; padding-left:15%">
                 <br><br>
                     <div class="main_title">
                         <h2>Detail</h2>
@@ -25,7 +25,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>강의명</h4>
@@ -38,7 +38,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                       <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>색상</h4>
@@ -51,7 +51,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>양면 인쇄</h4>
@@ -64,7 +64,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>페이지수</h4>
@@ -77,7 +77,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                       <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>용지 당 페이지 수</h4>
@@ -90,7 +90,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>페이지 방향</h4>
@@ -103,7 +103,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>배송비</h4>
@@ -120,7 +120,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>인쇄비</h4>
@@ -133,7 +133,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>종료 일시</h4>
@@ -146,7 +146,7 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>프린트 파일</h4>
@@ -159,11 +159,11 @@
                             <div class="choose_item">
                                 <div class="media">
                                     <div class="media-left">
-                                        <a href="#"><i class="icofont icofont-star"></i></a>
+                                        <a href="#" style="padding: 15px;"><img src="{% static 'image/duck.png' %}"> </a>
                                     </div>
                                     <div class="media-body">
                                         <h4>총금액 </h4>
-                                        <p>{{rprint.0.point}}</p>
+                                        <p>--{{rprint.0.point}}</p>
                                     </div>
                                 </div>
                             </div>
