--- a/APAP/main/templates/main/upload.html
+++ b/APAP/main/templates/main/upload.html
@@ -11,7 +11,7 @@
 </style>
 
 <section class="question_area">
-    <div class="container" style="padding-right:300px; padding-left:300px">
+    <div class="container" style="padding-right:15%; padding-left:15%">
         
             <div class="main_title">
                 <h2>인쇄 설정</h2>
