--- a/APAP/authservice/templates/authservice/signin.html
+++ b/APAP/authservice/templates/authservice/signin.html
@@ -36,6 +36,7 @@
                                 autofocus="autofocus"
                                 id="username"
                                 type="text"
+                                value="dduck"
                             />
                             </div>
                             
@@ -47,6 +48,7 @@
                                 required=""
                                 type="password"
                                 id="id_password1"
+                                value="1111"
                             />
                         </div>
                         <br>
