--- a/APAP/settings/static/css/page/component.css
+++ b/APAP/settings/static/css/page/component.css
@@ -11,7 +11,7 @@ html, body { height: 100%; }
 
 .pt-page {
    width: 100%;
-   height: 100%;
+   height: auto;
    position: absolute;
    top: 0;
    left: 0;
@@ -90,11 +90,11 @@ html, body { height: 100%; }
 }
 
 .pt-page-5 {
-   background: #fd6a62;
+   background: #B1CDFC;
 }
 
 .pt-page-6 {
-   background: #f68dbb;
+   background: #9BCCFC;
 }
 
 /* Triggers (menu and button) */
